--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
+    background-color: rgb(251, 194, 210);
 }
 
 .container {
@@ -20,7 +21,7 @@ img {
 
 input {
     color: #432000;
-    background-color: #DCE1EB;
+    background-color: #f0f5fe;
     border: 0;
     padding: 15px;
     border-radius: 8px;
