--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ img {
 }
 
 input {
-    color: #432000;
+    color: #562a00;
     background-color: #f0f5fe;
     border: 0;
     padding: 15px;
@@ -40,4 +40,22 @@ button {
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
+}
+
+ul {
+   list-style-type: none;
+   padding: 0;
+   display: flex;
+   flex-wrap: wrap;
+   gap: 10px;
+}
+
+li {
+    background-color: #FFFDF8;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    flex-grow: 1;
+    text-align: center;
+    font-size: 20px;
 }
